<resources>
    <string name="app_name">Doctors</string>
    <string name="profile">Профиль</string>
    <string name="history">История</string>
    <string name="choose_doctor">Выбор доктора</string>
    <string name="title">Best online \n Doctors App.</string>
    <string name="description_splash">remgkfdmgdsfsdfdsfkmgkfdmgkfddkfvmkfdlmgvklfdmvkldfmklvmdfklvmdfkmvkdfmvkldfmvlkdfmvfdmkgmfdklgmkfdlkldfmgkldfmgklmrteklgmklfmbklvmcbklmcvklbmvcklmbklvcmb</string>
    <string name="start_splash">Начать</string>
    <string name="back">Назад</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello">Hello,</string>
    <string name="email">Введите email</string>
    <string name="inputData">Ввод данных</string>
    <string name="input_password">Введите пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="signIn_with_google">Войти через google</string>
    <string name="signIn">Войти в аккаунт</string>
    <string name="forgot_password">Забыли пароль</string>
    <string name="register">Зарегистрироваться</string>
    <string name="registration">Регистрация</string>
    <string name="write_doctor">Введите имя стаматолога</string>
    <string name="seat_is_taken">забранировано</string>
    <string name="take_place">Забронировать</string>

    <string-array name="values_for_sort_doctor">
        <item>По убыванию рейтинга</item>
        <item>По возрастанию рейтинга</item>
        <item>По убыванию цены</item>
        <item>По возрастанию цены</item>
    </string-array>
</resources>