<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".autorization.data.signIn.SignInFragment"
        android:background="@color/blue_500">

        <TextView
            style="@style/title_white"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/title"
            app:layout_constraintBottom_toTopOf="@+id/background_signIn"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/background_signIn"
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:background="@drawable/background_information_splash"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/input_data_textView"
                style="@style/title_blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/inputData"
                android:textSize="32sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit_text_signIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_data_textView"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text_signIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_edit_text_signIn"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/forgot_password_btn"
                android:layout_width="wrap_content"
                style="@style/Widget.Material3.Button.TextButton"
                android:textColor="@color/blue_500"
                android:text="@string/forgot_password"
                android:textSize="14sp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@id/password_edit_text_signIn"
                app:layout_constraintTop_toBottomOf="@id/password_edit_text_signIn" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/registration_btn"
                android:layout_width="wrap_content"
                style="@style/Widget.Material3.Button.TextButton"
                android:textColor="@color/blue_500"
                android:text="@string/registration"
                android:textSize="14sp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/password_edit_text_signIn"
                app:layout_constraintTop_toBottomOf="@id/password_edit_text_signIn" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signIn_google_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shadowColor="#373737"
                android:text="@string/signIn_with_google"
                android:textColor="@color/gray"
                app:backgroundTint="@android:color/white"
                app:icon="@drawable/ic_google"
                app:iconSize="14dp"
                app:iconTintMode="multiply"
                app:iconGravity="textStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forgot_password_btn"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp" />

            <ImageButton
                android:id="@+id/signIn_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/semicircle"
                android:scaleX="1.8"
                android:scaleY="1.8"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/signIn_txv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/SignIn"
                style="@style/title_white"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/arrow_img"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/arrow_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:src="@drawable/ic_arrow"
                android:scaleX="1.3"
                android:scaleY="1.3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>